can be delete cars and types

--- a/public/assets/css/argon-dashboard.css
+++ b/public/assets/css/argon-dashboard.css
@@ -23758,7 +23758,7 @@ hr.horizontal.gray-light {
 }
 
 .navbar-vertical.bg-white .navbar-nav > .nav-item .nav-link.active {
-  background-color: #f6f9fc;
+  background-color: #6175df2b;
   box-shadow: none;
 }
 
